[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/GUI.gd" type="Script" id=1]
[ext_resource path="res://Inventory/ToolbarItem-1.png.png" type="Texture" id=2]
[ext_resource path="res://Inventory/ToolbarItem-7.png.png" type="Texture" id=3]
[ext_resource path="res://Inventory/ToolbarItem-3.png.png" type="Texture" id=4]
[ext_resource path="res://Inventory/ToolbarItem-2.png.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.47451, 1, 0.34902, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.133333 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.501961, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.133333 )

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0
columns = 2

[node name="VBoxLT" type="VBoxContainer" parent="GridContainer"]
margin_right = 318.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HPBar" type="ProgressBar" parent="GridContainer/VBoxLT"]
margin_right = 318.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
step = 1.0
percent_visible = false

[node name="PowerBar" type="ProgressBar" parent="GridContainer/VBoxLT"]
margin_top = 20.0
margin_right = 318.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 12 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
percent_visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/VBoxLT"]
margin_top = 36.0
margin_right = 256.0
margin_bottom = 52.0
rect_min_size = Vector2( 256, 16 )
size_flags_horizontal = 0

[node name="ToolBarItem1" type="MarginContainer" parent="GridContainer/VBoxLT/HBoxContainer"]
editor/display_folded = true
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="SelectedColor" type="ColorRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem1"]
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.52549, 0.282353, 0.282353, 0.501961 )

[node name="Sprite" type="TextureRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem1"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="ToolBarItem2" type="MarginContainer" parent="GridContainer/VBoxLT/HBoxContainer"]
editor/display_folded = true
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="SelectedColor" type="ColorRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem2"]
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.52549, 0.282353, 0.282353, 0.501961 )

[node name="Sprite" type="TextureRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem2"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 3 )

[node name="ToolBarItem3" type="MarginContainer" parent="GridContainer/VBoxLT/HBoxContainer"]
editor/display_folded = true
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="SelectedColor" type="ColorRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem3"]
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.52549, 0.282353, 0.282353, 0.501961 )

[node name="Sprite" type="TextureRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem3"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )

[node name="ToolBarItem4" type="MarginContainer" parent="GridContainer/VBoxLT/HBoxContainer"]
editor/display_folded = true
margin_left = 60.0
margin_right = 76.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="SelectedColor" type="ColorRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem4"]
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.52549, 0.282353, 0.282353, 0.501961 )

[node name="Sprite" type="TextureRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem4"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="ToolBarItem5" type="MarginContainer" parent="GridContainer/VBoxLT/HBoxContainer"]
editor/display_folded = true
margin_left = 80.0
margin_right = 96.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="SelectedColor" type="ColorRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem5"]
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.52549, 0.282353, 0.282353, 0.501961 )

[node name="Sprite" type="TextureRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem5"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="ToolBarItem6" type="MarginContainer" parent="GridContainer/VBoxLT/HBoxContainer"]
editor/display_folded = true
margin_left = 100.0
margin_right = 116.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="SelectedColor" type="ColorRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem6"]
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.52549, 0.282353, 0.282353, 0.501961 )

[node name="Sprite" type="TextureRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem6"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="ToolBarItem7" type="MarginContainer" parent="GridContainer/VBoxLT/HBoxContainer"]
editor/display_folded = true
margin_left = 120.0
margin_right = 136.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="SelectedColor" type="ColorRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem7"]
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.52549, 0.282353, 0.282353, 0.501961 )

[node name="Sprite" type="TextureRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem7"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="ToolBarItem8" type="MarginContainer" parent="GridContainer/VBoxLT/HBoxContainer"]
editor/display_folded = true
margin_left = 140.0
margin_right = 156.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="SelectedColor" type="ColorRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem8"]
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.52549, 0.282353, 0.282353, 0.501961 )

[node name="Sprite" type="TextureRect" parent="GridContainer/VBoxLT/HBoxContainer/ToolBarItem8"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="VBoxRT" type="VBoxContainer" parent="GridContainer"]
margin_left = 322.0
margin_right = 640.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxLB" type="VBoxContainer" parent="GridContainer"]
margin_top = 182.0
margin_right = 318.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxRB" type="VBoxContainer" parent="GridContainer"]
margin_left = 322.0
margin_top = 182.0
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
